# FyrdUp

./: .gitignore  README.md  requirements.txt  run_sim.sh  setup.sh
src/firefighter_robot/: package.xml  setup.py
src/firefighter_robot/firefighter_robot/: navigation_controller.py  water_manager.py
src/firefighter_robot/urdf/: firefighter.urdf.xacro
src/scout_robot/: package.xml  setup.py
src/scout_robot/config/: camera_params.yaml
src/scout_robot/scout_robot/: position_controller.py
src/scout_robot/urdf/: scout.urdf.xacro
src/wildfire_agents/: package.xml  setup.py
src/wildfire_agents/config/: agent_config.yaml
src/wildfire_agents/wildfire_agents/: fire_grid_node.py  firefighter_agent.py  foxglove_viz.py  message_logger.py  models.py  ros_bridge.py  scene_publisher_3d.py  scout_agent.py  scout_uagent.py  sim_odom_node.py  uagent_env.py  viz_colors.py  viz_renderer.py  vlm_gemini.py  vlm_interface.py  world_init.py
src/wildfire_gazebo/: CMakeLists.txt  package.xml
src/wildfire_gazebo/config/: fire_params.yaml
src/wildfire_gazebo/launch/: wildfire_sim.launch.py
src/wildfire_gazebo/worlds/: wildfire.world
src/wildfire_msgs/: CMakeLists.txt  package.xml
src/wildfire_msgs/msg/: FireGrid.msg  FirefighterStatus.msg  MoveCommand.msg  RefillCommand.msg
