<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_robot</name>
  <version>0.1.0</version>
  <description>Scout drone robot for wildfire simulation</description>
  <maintainer email="user@example.com">wildfire_sim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>wildfire_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
